<resources>
    <string name="app_name">learn04</string>
    <string name="question_text">this is question text context</string>
    <string name="false_btn_text">False</string>
    <string name="true_btn_text">True</string>
    <string name="previous_btn_btn_text">previous</string>
    <string name="next_btn_text">next</string>
    <string name="correct_text">correct</string>
    <string name="incorrect_text">InCorrect!!!</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="warning_text">Are u sure to show answer</string>
    <string name="show_answer_btn_text">Show Answer</string>
    <string name="cheat_text">Cheat!</string>
    <string name="cheat_wrong_text">cheat is wrong!!!</string>
    <string name="clean_preferences">Clean Preferences</string>
</resources>
